--- a/resultados/2-analisa-precisao-2019.Rmd
+++ b/resultados/2-analisa-precisao-2019.Rmd
@@ -74,8 +74,8 @@ Inicial. Faça os gráficos a mais que achar necessário para entender os dados 
 Uma medida interessante da eficiência desses métodos é calcular a soma dos erros ao quadrado (SSE) considerando o que o método definiu como a polaridade_normalizada e o que a avaliação humana definiu como a insatisfação.
 
 ```{r}
-reclamacoes %>% 
-    ggplot(aes(x = sentimento_op30, y = sentimento_sent)) + 
+sentimentos %>% 
+    ggplot(aes(x = conv_op_30, y = conv_sent)) + 
     geom_abline(slope = 1, intercept = 0, color = "grey") + 
     geom_count(alpha = .7) 
 ```
@@ -120,4 +120,3 @@ summary(lm_erro_lexico)
 **Dica** - o texto de resultado que queremos produzir é algo como: 
 
 Regressão múltipla foi utilizada para analisar se VarIndep1 e VarIndep2 tem uma associação significativa com o erro na estimativa de instatisfação da reclemação. Os resultados da regressão indicam que um modelo com os 2 preditores no formato Erro = XXX.VarIndep1 + YYY.VarIndep2 explicam XX,XX% da variância da variável de resposta (R2 = XX,XX). VarIndep1, medida como/em [unidade ou o que é o 0 e o que é 1] tem uma relação significativa com o erro (b = [yy,yy;  zz,zz], IC com 95%), assim como VarIndep2 medida como [unidade ou o que é o 0 e o que é 1] (b = [yy,yy;  zz,zz], IC com 95%). O aumento de 1 unidade de VarIndep1 produz uma mudança de...
-
